removed console logs, cleaned up notes

--- a/output/team.html
+++ b/output/team.html
@@ -25,57 +25,44 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Jen</h2>
+        <h2 class="card-title">Jennifer Nelson</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 243j</li>
-            <li class="list-group-item">Email: <a href="mailto:jen@home.com">jen@home.com</a></li>
-            <li class="list-group-item">Office number: 2498</li>
+            <li class="list-group-item">ID: 2423k</li>
+            <li class="list-group-item">Email: <a href="mailto:jen@nelson.com">jen@nelson.com</a></li>
+            <li class="list-group-item">Office number: 78</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">lee</h2>
+        <h2 class="card-title">Lee Nelson</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2408l</li>
-            <li class="list-group-item">Email: <a href="mailto:lee@home.com">lee@home.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/irengineer" target="_blank" rel="noopener noreferrer">irengineer</a></li>
+            <li class="list-group-item">ID: 2423k</li>
+            <li class="list-group-item">Email: <a href="mailto:lee@nelson.com">lee@nelson.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jnel-221" target="_blank" rel="noopener noreferrer">jnel-221</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Yoli</h2>
+        <h2 class="card-title">Yolanda Nelson</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 243424j</li>
-            <li class="list-group-item">Email: <a href="mailto:yoli@home.com">yoli@home.com</a></li>
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:yolanda@nelson.com">yolanda@nelson.com</a></li>
             <li class="list-group-item">School: KinderCare</li>
         </ul>
     </div>
 </div>
 
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">{{ name }}</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: {{ id }}</li>
-                            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
