--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Jennifer Nelson</h2>
+        <h2 class="card-title">Pinky Shepard</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2423k</li>
-            <li class="list-group-item">Email: <a href="mailto:jen@nelson.com">jen@nelson.com</a></li>
-            <li class="list-group-item">Office number: 78</li>
+            <li class="list-group-item">ID: 0001</li>
+            <li class="list-group-item">Email: <a href="mailto:pShepard@nmdy.com">pShepard@nmdy.com</a></li>
+            <li class="list-group-item">Office number: 101</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Lee Nelson</h2>
+        <h2 class="card-title">Mordin Solis</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2423k</li>
-            <li class="list-group-item">Email: <a href="mailto:lee@nelson.com">lee@nelson.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/jnel-221" target="_blank" rel="noopener noreferrer">jnel-221</a></li>
+            <li class="list-group-item">ID: 1103</li>
+            <li class="list-group-item">Email: <a href="mailto:mSolis@nmdy.com">mSolis@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/mSolis" target="_blank" rel="noopener noreferrer">mSolis</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Yolanda Nelson</h2>
+        <h2 class="card-title">T'ali Zorah</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1012</li>
+            <li class="list-group-item">Email: <a href="mailto:tZorah@nmdy.com">tZorah@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/tZorah" target="_blank" rel="noopener noreferrer">tZorah</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Urdnot Grunt</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:yolanda@nelson.com">yolanda@nelson.com</a></li>
-            <li class="list-group-item">School: KinderCare</li>
+            <li class="list-group-item">ID: 1107</li>
+            <li class="list-group-item">Email: <a href="mailto:uGrunt@nmdy.com">uGrunt@nmdy.com</a></li>
+            <li class="list-group-item">School: NMSU</li>
         </ul>
     </div>
 </div>
