--- a/output/team.html
+++ b/output/team.html
@@ -25,52 +25,52 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Jen Nelson</h2>
+        <h2 class="card-title">Pinky Shepard</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2849</li>
-            <li class="list-group-item">Email: <a href="mailto:jen@home.com">jen@home.com</a></li>
-            <li class="list-group-item">Office number: 23</li>
+            <li class="list-group-item">ID: 4242</li>
+            <li class="list-group-item">Email: <a href="mailto:pshepard@nmdy.com">pshepard@nmdy.com</a></li>
+            <li class="list-group-item">Office number: 13</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Lee Nelson</h2>
+        <h2 class="card-title">Mordin Solis</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2498</li>
-            <li class="list-group-item">Email: <a href="mailto:lee@nelson.com">lee@nelson.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/irengineer" target="_blank" rel="noopener noreferrer">irengineer</a></li>
+            <li class="list-group-item">ID: 5678</li>
+            <li class="list-group-item">Email: <a href="mailto:msolis@nmdy.com">msolis@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/mSolis" target="_blank" rel="noopener noreferrer">mSolis</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Sunny Nelson</h2>
+        <h2 class="card-title">T'ali Zorah</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2384</li>
-            <li class="list-group-item">Email: <a href="mailto:sunny@nelson.com">sunny@nelson.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/sunny" target="_blank" rel="noopener noreferrer">sunny</a></li>
+            <li class="list-group-item">ID: 6523</li>
+            <li class="list-group-item">Email: <a href="mailto:tzora@nmdy.com">tzora@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/tzorah" target="_blank" rel="noopener noreferrer">tzorah</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Yoli Nelson</h2>
+        <h2 class="card-title">Urdnot Grunt</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2438</li>
-            <li class="list-group-item">Email: <a href="mailto:yoli@nelson.com">yoli@nelson.com</a></li>
+            <li class="list-group-item">ID: 9011</li>
+            <li class="list-group-item">Email: <a href="mailto:ugrunt@nmdy.com">ugrunt@nmdy.com</a></li>
             <li class="list-group-item">School: NMSU</li>
         </ul>
     </div>
