added gifs to assets file; updated reademe

--- a/output/team.html
+++ b/output/team.html
@@ -30,9 +30,48 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4242</li>
+            <li class="list-group-item">ID: 1</li>
             <li class="list-group-item">Email: <a href="mailto:pshepard@nmdy.com">pshepard@nmdy.com</a></li>
-            <li class="list-group-item">Office number: 13</li>
+            <li class="list-group-item">Office number: 4</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Garrus Vakarian</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 234</li>
+            <li class="list-group-item">Email: <a href="mailto:gvakarian@nmdy.com">gvakarian@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/gvakarian" target="_blank" rel="noopener noreferrer">gvakarian</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Tali'Zorah</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 345</li>
+            <li class="list-group-item">Email: <a href="mailto:tzorah@nmdy.com">tzorah@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/tzorah" target="_blank" rel="noopener noreferrer">tzorah</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Liara T'Soni</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 589</li>
+            <li class="list-group-item">Email: <a href="mailto:ltsoni@nmdy.com">ltsoni@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/ltsoni" target="_blank" rel="noopener noreferrer">ltsoni</a></li>
         </ul>
     </div>
 </div>
@@ -43,22 +82,74 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5678</li>
+            <li class="list-group-item">ID: 831</li>
             <li class="list-group-item">Email: <a href="mailto:msolis@nmdy.com">msolis@nmdy.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/mSolis" target="_blank" rel="noopener noreferrer">mSolis</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/msolis@nmdy.com" target="_blank" rel="noopener noreferrer">msolis@nmdy.com</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">T'ali Zorah</h2>
+        <h2 class="card-title">Thane Krios</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 6523</li>
-            <li class="list-group-item">Email: <a href="mailto:tzora@nmdy.com">tzora@nmdy.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/tzorah" target="_blank" rel="noopener noreferrer">tzorah</a></li>
+            <li class="list-group-item">ID: 447</li>
+            <li class="list-group-item">Email: <a href="mailto:tkrios@nmdy.com">tkrios@nmdy.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/tkrios" target="_blank" rel="noopener noreferrer">tkrios</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Urdnot Wrex</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 893</li>
+            <li class="list-group-item">Email: <a href="mailto:uwrex@nmdy.com">uwrex@nmdy.com</a></li>
+            <li class="list-group-item">School: NYU</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">James Vega</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 489</li>
+            <li class="list-group-item">Email: <a href="mailto:jvega@nmdy.com">jvega@nmdy.com</a></li>
+            <li class="list-group-item">School: NMSU</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Ashley Williams</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 693</li>
+            <li class="list-group-item">Email: <a href="mailto:awilliams@nmdy.com">awilliams@nmdy.com</a></li>
+            <li class="list-group-item">School: UW</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Kaiden Alenko</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 558d</li>
+            <li class="list-group-item">Email: <a href="mailto:kalenko@nmdy.com">kalenko@nmdy.com</a></li>
+            <li class="list-group-item">School: UCLA</li>
         </ul>
     </div>
 </div>
@@ -69,7 +160,7 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 9011</li>
+            <li class="list-group-item">ID: 932</li>
             <li class="list-group-item">Email: <a href="mailto:ugrunt@nmdy.com">ugrunt@nmdy.com</a></li>
             <li class="list-group-item">School: NMSU</li>
         </ul>
